Ajouter les dépendances difflib, moment-timezone et nodemon dans package.json. Mettre à jour les chemins d'accès dans swagger.json. Séparation des routes api dans des fichiers séparés
